<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:showIn="@layout/activity_update_supplier"
    tools:context="com.adinaandsari.virtuallibrary.UpdateSupplier"
    android:orientation="vertical">
    <LinearLayout
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_weight="1">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/id_text_view"
        android:id="@+id/id_text_view_update_supplier" />

        <Spinner
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/id_spinner_update_supplier"
            android:layout_weight="1"
            android:clickable="true" />
</LinearLayout>
<LinearLayout
android:orientation="horizontal"
android:layout_width="match_parent"
android:layout_height="match_parent"
android:layout_weight="1">

<TextView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/name_text_view"
    android:id="@+id/name_text_view_update_supplier" />

<EditText
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:inputType="textPersonName"
    android:ems="10"
    android:id="@+id/name_edit_text_update_supplier"
    android:layout_weight="1"
    android:hint="@string/enter_name" />
</LinearLayout>
<LinearLayout
android:orientation="horizontal"
android:layout_width="match_parent"
android:layout_height="match_parent"
android:layout_weight="1">

<TextView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/address_text_view"
    android:id="@+id/address_text_view_update_supplier" />

<EditText
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:inputType="textPostalAddress"
    android:ems="10"
    android:id="@+id/address_edit_text_update_supplier"
    android:layout_weight="1"
    android:hint="@string/enter_address" />
</LinearLayout>
<LinearLayout
android:orientation="horizontal"
android:layout_width="match_parent"
android:layout_height="match_parent"
android:layout_weight="1"
android:weightSum="3">

<TextView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/gender_text_view"
    android:id="@+id/gender_text_view__update_supplier" />

<CheckBox
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/male"
    android:id="@+id/male_checkBox_update_supplier"
    android:onClick="onCheckBoxClicked"/>

<CheckBox
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/female"
    android:id="@+id/female_checkBox_update_supplier"
    android:onClick="onCheckBoxClicked"/>
</LinearLayout>
<LinearLayout
android:orientation="horizontal"
android:layout_width="match_parent"
android:layout_height="match_parent"
android:layout_weight="1">

<TextView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/phon_number_text_view"
    android:id="@+id/phone_number_text_view_update_supplier" />

<EditText
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:inputType="phone"
    android:ems="10"
    android:id="@+id/phone_number_edit_text_update_supplier"
    android:layout_weight="1"
    android:hint="@string/enter_phone_number" />
</LinearLayout>
<LinearLayout
android:orientation="horizontal"
android:layout_width="match_parent"
android:layout_height="match_parent"
android:layout_weight="1">

<TextView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/email_text_view"
    android:id="@+id/email_text_view_update_supplier" />

<EditText
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:inputType="textEmailAddress"
    android:ems="10"
    android:id="@+id/email_edit_text_update_supplier"
    android:layout_weight="1"
    android:hint="@string/enter_email" />
</LinearLayout>
<LinearLayout
android:orientation="horizontal"
android:layout_width="match_parent"
android:layout_height="match_parent"
android:layout_weight="1">

<TextView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/customer_service_num_add_supplier"
    android:id="@+id/customer_service_num_text_view_update_supplier" />

<EditText
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:inputType="date"
    android:ems="10"
    android:id="@+id/customer_service_num_edit_text_update_supplier"
    android:layout_weight="1"
    android:hint="@string/enter_customer_service_num"
    android:phoneNumber="true" />

</LinearLayout>

<LinearLayout
android:orientation="horizontal"
android:layout_width="match_parent"
android:layout_height="match_parent"
android:layout_weight="1">

<TextView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/reservation_num_text_view_add_supplier"
    android:id="@+id/reservation_num_text_view_update_supplier" />

<EditText
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:inputType="phone"
    android:ems="10"
    android:id="@+id/reservation_num_edit_text_update_supplier"
    android:singleLine="false"
    android:selectAllOnFocus="false"
    android:phoneNumber="true"
    android:hint="@string/enter_reservation_num" />
</LinearLayout>

<LinearLayout
android:orientation="horizontal"
android:layout_width="match_parent"
android:layout_height="match_parent"
android:layout_weight="1">

<TextView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/type_text_view_add_supplier"
    android:id="@+id/type_text_view_update_supplier" />

<Spinner
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:id="@+id/type_spinner_update_supplier"
    android:layout_weight="1" />
</LinearLayout>

<LinearLayout
android:orientation="vertical"
android:layout_width="match_parent"
android:layout_height="match_parent"
android:layout_weight="1">

<Button
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/Update_button"
    android:id="@+id/update_supplier_button_update_supplier"
    android:layout_gravity="center_horizontal" />
</LinearLayout>

</LinearLayout>
